--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 html {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 body {
@@ -211,7 +211,7 @@ body {
   padding: 0.5rem;
   margin-right: 0.5rem;
   font-size: 1rem;
-  color: red;
+  color: #fff;
   cursor: pointer;
 }
 
@@ -229,7 +229,7 @@ body {
 
 @media only screen and (min-width: 610px) {
   html {
-    font-size: 12px;
+    font-size: 22px;
   }
 
   .Header h1 {
